--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 <title>Pet Lost Management Portal</title>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 <style>
-  /* Global Styles */
   body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -79,20 +78,20 @@
   <h1>Welcome to Pet Lost Management</h1>
   <p>Find your lost pet or help others find theirs with our comprehensive pet lost management portal.</p>
   <a href="login.html" class="btn">Login</a>
-  <a href="register.html" class="btn">Register</a>
+  <a href="reg.html" class="btn">Register</a>
   <div class="features">
     <div class="feature">
-      <img src="https://via.placeholder.com/150" alt="Search Lost Pets">
+      <img src="dog-puppy-on-garden-royalty-free-image-1586966191.jpg" alt="Search Lost Pets">
       <h2>Search Lost Pets</h2>
       <p>Quickly search through listings of lost pets to see if someone has found yours.</p>
     </div>
     <div class="feature">
-      <img src="https://via.placeholder.com/150" alt="Report Lost Pets">
+      <img src="beautiful-smooth-haired-red-cat-lies-on-the-sofa-royalty-free-image-1678488026.jpg" alt="Report Lost Pets">
       <h2>Report Lost Pets</h2>
       <p>Report your lost pet to the community to increase the chances of finding them.</p>
     </div>
     <div class="feature">
-      <img src="https://via.placeholder.com/150" alt="Community Support">
+      <img src="dog breeds on lawn.webp" alt="Community Support">
       <h2>Community Support</h2>
       <p>Join a community of pet lovers who are dedicated to helping reunite lost pets with their owners.</p>
     </div>
